--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "phpoffice/phpword": "^0.13.0",
         "dmstr/yii2-adminlte-asset": "2.*",
         "ptrnov/yii2-fusionchart": "*",
-        "2amigos/yii2-highcharts-widget": "~1.0"
+        "2amigos/yii2-highcharts-widget": "~1.0",
+        "2amigos/yii2-date-picker-widget": "~1.0"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
