--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "yiisoft/yii2-swiftmailer": "~2.0.0",
         "kartik-v/yii2-widget-select2": "@dev",
         "kartik-v/yii2-widget-datepicker": "@dev",
-        "mpdf/mpdf": "^6.1",
+        "mpdf/mpdf": "@dev",
         "phpoffice/phpexcel": "^1.8",
         "phpoffice/phpword": "^0.13.0",
         "dmstr/yii2-adminlte-asset": "2.*",
